--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <h1>Un super titre</h1>
+    <h1>Un titre vraiment génial !</h1>
 </body>
 </html>
